Fixing the contrast of links in tooltips.

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme.css
@@ -434,6 +434,10 @@ a.currentLocation:hover {
 	min-width: 15em;
 }
 
+.tooltip .navlinkonpage {
+	color:skyblue;
+}
+
 .tooltipTailFromleft {
 	position: absolute;
 	display: inline-block;
